# amazon-sqs-python-extended-client-lib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: leaked-secrets-scan.yml  pull_request.yml  release.yml  semgrep.yml
src/sqs_extended_client/: __init__.py  client.py  exception_messages.py  exceptions.py
test/: test_client.py
test_integ/: __init__.py  test_client.py
test_integ/fixtures/: objects.py  session.py  sqs.py
